--- a/SAFARI/template/req.html
+++ b/SAFARI/template/req.html
@@ -21,7 +21,7 @@
 <body>
     <nav>
         <div class="nleft">
-            <a href="https://t.me/safaridev">
+            <a href="https://t.me/Dd_Lovely">
                 <h3 id="heading" style="z-index: 100;" class="magnet">SAFARI-DEV</h3>
             </a>
         </div>
@@ -91,7 +91,7 @@
                             <h1>OUR ALL <span>CHANNELS</span> LIST</h1>
                             <div class="links chnl-link">
                                 <a class="magnet" href="https://t.me/lusifilms"><button>LUSI FILMS - MAIN</button></a>
-                                <a class="magnet" href="https://t.me/LusiGroup"><button>LUSI GROUP</button></a>
+                                <a class="magnet" href="https://t.me/lusifilms"><button>LUSI GROUP</button></a>
                                 <a class="magnet" href="https://t.me/topallmovie"><button>NEW RELEASE MOVIES</button></a>
                                 <a class="magnet" href="https://t.me/lusi_films"><button>NEW RELEASE MOVIES 2</button></a>
                                 <a class="magnet" href="https://t.me/+gHtA-IkBdgQ1MzA9"><button>BISAL FILES DIRECT</button></a>
@@ -119,7 +119,7 @@
                             <p style="text-align: center;">we can tal'k for your support and you can report through
                                 telegram</p>
                             <div class="links contact">
-                                <a href="https://t.me/safaridev"><button>CONTACT</button></a>
+                                <a href="https://t.me/Dd_Lovely"><button>CONTACT</button></a>
                             </div>
                         </div>
                     </div>
@@ -149,8 +149,8 @@
                                 style="font-weight: 700;">SAFARI-DEVELOPER</span></a>. All
                         Rights Reserved.</h5>
                     <div class="icons">
-                        <a href="https://github.com/safarideveloper"><i class="fa-brands fa-github fa-lg"></i></a>
-                        <a href="https://t.me/safaridev"><i class="fa-brands fa-telegram fa-lg"></i></a>
+                        <a href="https://github.com"><i class="fa-brands fa-github fa-lg"></i></a>
+                        <a href="https://t.me/Dd_Lovely"><i class="fa-brands fa-telegram fa-lg"></i></a>
                     <!--   <a href="https://www.instagram.com/jkjeetu01"><i
                                 class="fa-brands fa-square-instagram fa-lg"></i></a>    -->
                     </div>
@@ -183,4 +183,5 @@
 <script src="script.js"></script>
 
 </html>
+
 
